<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    android:id="@+id/mainLayout"
    android:padding="14dp"
    tools:context=".MainActivity">

    <TextView
        android:paddingTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_main"
        android:gravity="center_horizontal"
        android:textColor="@color/blanco"
        android:text="@string/label_subtitulo_inicio"/>

    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="14dp">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:text="@string/label_email"/>

        <EditText
            android:id="@+id/etMainEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:text="@string/label_password"/>

        <EditText
            android:id="@+id/etMainClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/blanco"/>

        <Button
            android:id="@+id/btMainIngresar"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_inicio"/>

        <TextView
            android:id="@+id/tvMainRegistro"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:gravity="center_horizontal"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:text="@string/link_registrar"/>

    </LinearLayout>




</LinearLayout>