<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp"
    android:background="@drawable/bg_main"
    tools:context=".RegistroActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_main"
        android:textColor="@color/blanco"
        android:gravity="center_horizontal"
        android:text="@string/label_registro"/>

    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:layout_marginTop="10dp"
            android:text="@string/label_nombre" />

        <EditText
            android:id="@+id/etRegistroNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:layout_marginTop="10dp"
            android:text="@string/label_email"/>

        <EditText
            android:id="@+id/etRegistroEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:layout_marginTop="10dp"
            android:text="@string/label_clave"/>

        <EditText
            android:id="@+id/etRegistroClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:layout_marginTop="10dp"
            android:text="@string/label_repetir"/>

        <EditText
            android:id="@+id/etRegistroRepetir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btRegistroConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Confirmar Registro"/>


        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/lnk_inicio_sesion"/>

    </LinearLayout>


</LinearLayout>