<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp"
    android:background="@drawable/bg_main"
    tools:context=".PerfilActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_main"
        android:textColor="@color/blanco"
        android:gravity="center_horizontal"
        android:text="@string/label_actualizar"/>

    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:layout_marginTop="10dp"
            android:text="@string/label_nombre" />

        <EditText
            android:id="@+id/etActualizarNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:layout_marginTop="10dp"
            android:text="@string/label_telefono"/>

        <EditText
            android:id="@+id/etActualizarTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:layout_marginTop="10dp"
            android:text="@string/label_clave"/>

        <EditText
            android:id="@+id/etActualizarClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btActualizarConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Confirmar Actualización"/>

    </LinearLayout>


</LinearLayout>